Fixed merge errors, reworded CustomApiKeyPreferences to FetcherApiKey, applied ide suggestions